<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="318dp"
    android:layout_height="198dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/custom_button">

    <TextView
        android:id="@+id/tv_appdeployed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_app_has_been_deployed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/montserratblack"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/tv_clickhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_access_your_app"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="10sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/tv_appdeployed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_url"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_clickhere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>