<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".miniproject.MiniProjectActivity">


    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_55_55_55"
        android:textStyle="bold"
        android:fontFamily="@font/montserratblack"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_lorem_ipsum_dolor_sit_amet_consectetur"
        android:fontFamily="@font/montserratblack"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_timer"/>

    <LinearLayout
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <VideoView
            android:id="@+id/vv_usercamera"
            android:layout_width="250dp"
            android:layout_height="200dp" />

        <VideoView
            android:id="@+id/vv_videochatbot"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="29dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="850dp"
        android:layout_height="529dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_timer"
        app:layout_constraintStart_toEndOf="@id/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_understanding_and_experience_with_object_oriented_programming_oop"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/button_grey"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:background="@color/button_grey">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/start_recording"
                android:background="@color/button_red"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>